# py18next

./: .pre-commit-config.yaml  README.md  pyproject.toml
py18next/: __init__.py  i18n.py  yaml.py
tests/: test_py18next.py
