[project]
name = "py18next"
version = "0.1.0"
description = "Python internationalization framework"
authors = [
    {name = "Maximiliano Curia", email = "maxy@gnuservers.com.ar"},
]
license = {text = "MIT"}
dependencies = [
    "babel>=2.16.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",
    "pyparsing>=3.1.3",
]
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
]
